* Updated to 4.14.226
* Some ufs & thermal fixes