@@ -1,2 +1,3 @@
-* Updated to 4.14.226
-* Some ufs & thermal fixes
+* Rebased on Ghost Reborn's CAF kernel
+* Only works on OSS vendor roms
+* No upstream
